--- a/source/form.html
+++ b/source/form.html
@@ -14,21 +14,23 @@
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo-wrapper">
-                <picture>
-                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
-                  <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-                  <img class="main-nav__logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
-                </picture>
+                <a class="main-nav__logo-link" href="index.html">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                    <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                    <img class="main-nav__logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
+                  </picture>
+                </a>
                 <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
               </div>
               <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
+                <li class="site-list__item">
                   <a class="site-list__link" href="index.html">Главная</a>
                 </li>
                 <li class="site-list__item">
                   <a class="site-list__link" href="photo.html">Фотографии</a>
                 </li>
-                <li class="site-list__item">
+                <li class="site-list__item site-list__item--active">
                   <a class="site-list__link">Конкурс</a>
                 </li>
                 <li class="site-list__item">
@@ -46,16 +48,138 @@
               <h1 class="page-form__competition">Конкурс на самое безбашенное путешествие с Пинк</h1>
             </div>
           </div>
+          <section class="history">
+            <h2 class="visually-hidden">Выйграй приз</h2>
+            <div class="history__wrapper">
+              <p class="history__price history__price-mobile">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+              <p class="history__price-tablet history__price-mobile">Пожалуйста, заполните форму ниже:</p>
+              <p class="history__price history__price-desktop">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
+            </div>
+              <form class="history__info" method="post" action="https://echo.htmlacademy.ru">
+                <section class="history__block-general-name">
+                  <p class="history__block-first history__block-surname">
+                    <label class="history__info-label" for="user-surname">Фамилия:</label>
+                    <input class="history__info-introduce history__info-surname" id="user-surname" type="text" name="surname" placeholder="Укажите фамилию *">
+                  </p>
+                  <p class="history__block-first history__block-name">
+                    <label class="history__info-label" for="user-name">Имя:</label>
+                    <input class="history__info-introduce history__info-name" id="user-name" type="text" name="name" placeholder="Введите ваше имя *">
+                  </p>
+                  <p class="history__block-first history__block-patronymic">
+                    <label class="history__info-label" for="user-patronymic">Отчество:</label>
+                    <input class="history__info-introduce history__info-patronymic" id="user-patronymic" type="text" name="patronymic" placeholder="Ну и отчество тоже"> 
+                  </p>
+                </section>
+                <section class="history__block-general-progress">
+                  <fieldset class="history__block-progress">
+                    <legend class="history__legend history__legend-progress">Ваши безбашенные достижения в путешествии</legend>
+                      <ul class="history__list-progress">
+                        <li class="history__item-progress history__item-progress-active">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="selfie" id="filter-selfie" checked="">
+                          <label class="history__label history__progress-label" for="filter-selfie">Сделал селфи с акулой</label>
+                        </li>
+                        <li class="history__item-progress history__item-progress-active">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="beach" id="filter-beach" checked="">
+                          <label class="history__label history__progress-label" for="filter-beach">Обгорел на пляже</label>
+                        </li>
+                        <li class="history__item-progress">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="noriss" id="filter-noriss">
+                          <label class="history__label history__progress-label" for="filter-noriss">Видел Чака Норриса</label>
+                        </li>
+                        <li class="history__item-progress">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="souvenirs" id="filter-souvenirs">
+                          <label class="history__label history__progress-label" for="filter-souvenirs">Накупил сувениров</label>
+                        </li>
+                        <li class="history__item-progress history__item-progress-active">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="tower" id="filter-tower" checked="">
+                          <label class="history__label history__progress-label" for="filter-tower">Удержал башню</label>
+                        </li>
+                        <li class="history__item-progress">
+                          <input class="visually-hidden history__progress-input history__progress-input-checkbox" type="checkbox" name="hotel" id="filter-hotel">
+                          <label class="history__label history__progress-label" for="filter-hotel">Разгромил отель</label>
+                        </li>
+                      </ul>
+                  </fieldset>
+                </section>
+                <section class="history__block-general-contacts">
+                  <fieldset class="history__block-contacts">
+                    <legend class="history__legend history__legend-mobile">Контактная информация</legend>
+                    <div class="history__contacts-wrapper">
+                      <div class="history__contacts history__contacts-tel">
+                        <label class="history__info-label history__label-contacts history__label-tel">Номер телефона</label>
+                        <input class="history__info-introduce history__info-introduce-contacts history__tel" id="user-tel" type="text" name="tel" placeholder="Номер, пожалуйста"> 
+                      </div>
+                      <div class="history__contacts history__contacts-email">
+                        <label class="history__info-label history__label-contacts history__label-email">Адрес почты</label>
+                        <input class="history__info-introduce history__info-introduce-contacts history__email" id="user-email" type="text" name="email" placeholder="Введите почту *"> 
+                      </div>
+                    </div>
+                  </fieldset>
+                </section>
+                <section class="history__block-general-app">
+                  <fieldset class="history__block-app">
+                    <legend class="history__legend">С каким приложением путешествовали?</legend>
+                    <ul class="history__list-app">
+                      <li class="history__item-app history__item-app-active">
+                        <input class="visually-hidden history__app-input app-input-radio" type="radio" name="app-group" value="ios" id="app-ios" checked>
+                        <label class="history__label history__label-app" for="app-ios">Pink для iOS</label>
+                      </li>
+                      <li class="history__item-app">
+                        <input class="visually-hidden history__app-input app-input-radio" type="radio" name="app-group" value="android" id="app-android">
+                        <label class="history__label history__label-app" for="app-android">Pink на Android</label>
+                      </li>
+                      <li class="history__item-app">
+                        <input class="visually-hidden history__app-input app-input-radio" type="radio" name="app-group" value="win" id="app-win">
+                        <label class="history__label history__label-app" for="app-win">Windows Phone</label>
+                      </li>
+                    </ul>
+                  </fieldset>
+                </section>
+                <section class="history__block-general-reviews">
+                  <fieldset class="history__block-reviews">
+                    <legend class="history__legend history__legend-reviews">Опишите свои эмоции</legend>
+                    <textarea class="history-reviews" name="word" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+                  </fieldset>
+                </section>
+                <section class="history__block-button">
+                  <div class="history__button-wrapper">
+                    <button type="submit" class="history__button button__send">Отправить форму</button>
+                    <p class="history__important history__important-mobile"><span>* </span>— обязательные поля</p>
+                    <p class="history__important history__important-desktop"><span>* </span>— обязательные для заполнения поля</p>
+                  </div>
+                </section>
+                <section class="modal modal__save">
+                  <div class="modal__save-wrapper">
+                    <h2 class="modal__request modal__request-save">Ваша заявка отправлена</h2>
+                    <p class="modal__text modal__text-save">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+                  </div>
+                  <div class="modal__button-wrapper">
+                    <button type="button" class="modal__button-save history__button">Закрыть окно</button>
+                  </div>
+                </section>
+                <section class="modal modal__error">
+                  <div class="modal__error-wrapper">
+                    <h2 class="modal__request modal__request-error">Что-то пошло не так!</h2>
+                    <p class="modal__text modal__text-error">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+                    <button type="button" class="modal__button-error history__button modal__button-error-mobile">OK</button>
+                    <div class="modal__button-wrapper modal__button-wrapper-desktop">
+                      <button type="button" class="modal__button-error-desktop history__button">OK</button>
+                    </div>
+                  </div>
+                </section>
+              </form>
+        </section>
         </main>
 
         <footer class="page-footer-index">
             <div class="page-footer-index__wrapper">
               <div class="page-footer__logo-wrapper">
-                <picture>
-                  <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
-                  <source media="(min-width: 660px)" srcset="img/logo-pink-blue-mobile.svg">
-                  <img class="main-nav__logo" src="img/logo-pink-blue-mobile.svg" width="75" height="22" alt="Пинк">
-                </picture>
+                <svg class="page-footer__logo-mobile" width="75" height="22">
+                  <use xlink:href="img/sprite.svg#icon-logo-pink-blue-mobile"></use>
+                </svg>
+                <svg class="page-footer__logo-desktop" width="18" height="18">
+                  <use xlink:href="img/sprite.svg#icon-logo-pink-blue-desktop"></use>
+                </svg>
               </div>
               <div class="page-footer__social social">
                 <ul class="social__list">
@@ -94,22 +218,7 @@
           </footer>
     </div>
 
-    <script>
-      var navMain = document.querySelector('.main-nav');
-      var navToggle = document.querySelector('.main-nav__toggle');
-
-      navMain.classList.remove('main-nav--nojs');
-
-      navToggle.addEventListener('click', function() {
-        if (navMain.classList.contains('main-nav--closed')) {
-          navMain.classList.remove('main-nav--closed');
-          navMain.classList.add('main-nav--opened');
-        } else {
-          navMain.classList.add('main-nav--closed');
-          navMain.classList.remove('main-nav--opened');
-        }
-      });
-    </script>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
