--- a/source/index.html
+++ b/source/index.html
@@ -297,7 +297,9 @@
                       </div>
                       <div class="contacts__email-wrapper">
                         <p class="contacts__label">Пишите:</p>
-                        <p class="contacts__fact">mail@htmlacademy.ru</p>
+                        <p class="contacts__fact">
+                          <a class="contacts__fact contacts__fact-link" href="#">mail@htmlacademy.ru</a>
+                        </p>
                       </div>
                       <div class="contacts__adress-wrapper">
                         <p class="contacts__label">Приезжайте в гости:</p>
@@ -307,6 +309,7 @@
                   </div>
                 </section>
                 <section class="map">
+                  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716324643!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1558356208691!5m2!1sru!2sru" frameborder="0" style="border:0" allowfullscreen></iframe>                  
                   <div class="map__wrapper">
                     <h2 class="visually-hidden">Как до нас добраться</h2>
                   </div>
@@ -316,11 +319,12 @@
         <footer class="page-footer-index page-footer-photo">
           <div class="page-footer-index__wrapper">
             <div class="page-footer__logo-wrapper">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
-                <source media="(min-width: 660px)" srcset="img/logo-pink-blue-mobile.svg">
-                <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="75" height="22" alt="Пинк">
-              </picture>
+              <svg class="page-footer__logo-mobile" width="75" height="22">
+                <use xlink:href="img/sprite.svg#icon-logo-pink-blue-mobile"></use>
+              </svg>
+              <svg class="page-footer__logo-desktop" width="18" height="18">
+                <use xlink:href="img/sprite.svg#icon-logo-pink-blue-desktop"></use>
+              </svg>
             </div>
             <div class="page-footer__social social">
               <ul class="social__list">
