--- a/source/photo.html
+++ b/source/photo.html
@@ -14,18 +14,20 @@
           <nav class="main-nav main-nav--closed main-nav--nojs">
             <div class="main-nav__wrapper">
               <div class="main-nav__logo-wrapper">
-                <picture>
-                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
-                  <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-                  <img class="main-nav__logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
-                </picture>
+                  <a class="main-nav__logo-link" href="index.html">
+                    <picture>
+                      <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                      <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                      <img class="main-nav__logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
+                    </picture>
+                  </a>
                 <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
               </div>
               <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
+                <li class="site-list__item">
                   <a class="site-list__link" href="index.html">Главная</a>
                 </li>
-                <li class="site-list__item">
+                <li class="site-list__item site-list__item--active">
                   <a class="site-list__link">Фотографии</a>
                 </li>
                 <li class="site-list__item">
@@ -54,7 +56,7 @@
             <div class="photo-post__wrapper">
               <ul class="photo-post__list">
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block-panorama">
                       <picture>
                         <source type="image/webp" media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
                         <source type="image/webp" media="(min-width: 660px)" srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
@@ -72,7 +74,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-car-desktop@1x.webp 1x, img/photo-car-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.webp 1x, img/photo-car-tablet@2x.webp 2x">
@@ -90,7 +92,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-drumset-desktop@1x.webp 1x, img/photo-drumset-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.webp 1x, img/photo-drumset-tablet@2x.webp 2x">
@@ -108,7 +110,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-window-desktop@1x.webp 1x, img/photo-window-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.webp 1x, img/photo-window-tablet@2x.webp 2x">
@@ -126,7 +128,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-fair-desktop@1x.webp 1x, img/photo-fair-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.webp 1x, img/photo-fair-tablet@2x.webp 2x">
@@ -144,7 +146,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-pov-desktop@1x.webp 1x, img/photo-pov-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.webp 1x, img/photo-pov-tablet@2x.webp 2x">
@@ -162,7 +164,7 @@
                 </article>
               </li>
               <li class="photo-post__item">
-                <article>
+                <article class="photo-post__block">
                     <picture>
                       <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-wing-desktop@1x.webp 1x, img/photo-wing-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.webp 1x, img/photo-wing-tablet@2x.webp 2x">
@@ -204,48 +206,48 @@
                 <form class="photo-editor__post-tools" method="GET" action="https://echo.htmlacademy.ru">
                   <legend class="visually-hidden">Обрезание</legend>
                   <fieldset class="photo-editor__instrument photo-editor__crop">
-                    <svg class="photo-editor__icon" width="48" height="48">
+                    <svg class="photo-editor__icon photo-editor__icon-crop photo-editor__instrument-active" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
                     <div class="photo-editor__range-controls photo-editor__range-controls-tablet">
                       <div class="photo-editor__scale">
                         <div class="photo-editor__bar"></div>
                       </div>
-                      <div class="photo-editor__toggle"></div>
+                      <div class="photo-editor__toggle photo-editor__toggle-crop"></div>
                     </div>
                   </fieldset>
                   <legend class="visually-hidden">Заливка</legend>
                   <fieldset class="photo-editor__instrument photo-editor__fill">
-                    <svg class="photo-editor__icon" width="48" height="48">
+                    <svg class="photo-editor__icon photo-editor__icon-fill" width="48" height="48">
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
                     <div class="photo-editor__range-controls photo-editor__range-controls-tablet">
                       <div class="photo-editor__scale">
                         <div class="photo-editor__bar"></div>
                       </div>
-                      <div class="photo-editor__toggle"></div>
+                      <div class="photo-editor__toggle photo-editor__toggle-fill"></div>
                     </div>
                   </fieldset>
                   <legend class="visually-hidden">Контрастность</legend>
                   <fieldset class="photo-editor__instrument photo-editor__contrast">
-                    <svg class="photo-editor__icon" width="32" height="32">
+                    <svg class="photo-editor__icon photo-editor__icon-contrast" width="32" height="32">
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
-                    <div class="photo-editor__range-controls photo-editor__range-controls-tablet">
+                    <div class="photo-editor__range-controls photo-editor__range-controls-tablet photo-editor__range-controls-contrast">
                       <div class="photo-editor__scale">
                         <div class="photo-editor__bar"></div>
                       </div>
-                      <div class="photo-editor__toggle"></div>
+                      <div class="photo-editor__toggle photo-editor__toggle-contrast"></div>
                     </div>
                   </fieldset>
-                  <div class="photo-editor__range-controls">
-                    <div class="photo-editor__scale">
-                      <div class="photo-editor__bar"></div>
-                    </div>
+                  <div class="photo-editor__range-controls photo-editor__range-controls-mobile">
+                    <div class="photo-editor__scale"></div>
                     <div class="photo-editor__toggle"></div>
                   </div>
-                  <button type="submit" class="photo-editor__button photo-editor__button-post">Запостить</button>
-                  <button type="submit" class="photo-editor__button photo-editor__button-cancel">Отмена</button>
+                  <div class="photo-editor__button-wrapper">
+                    <button type="submit" class="photo-editor__button photo-editor__button-post">Запостить</button>
+                    <button type="submit" class="photo-editor__button photo-editor__button-cancel">Отмена</button>
+                  </div>
                 </form>
               </div>
             </div>
@@ -255,11 +257,12 @@
         <footer class="page-footer-index">
             <div class="page-footer-index__wrapper">
               <div class="page-footer__logo-wrapper">
-                <picture>
-                  <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
-                  <source media="(min-width: 660px)" srcset="img/logo-pink-blue-mobile.svg">
-                  <img class="main-nav__logo" src="img/logo-pink-blue-mobile.svg" width="75" height="22" alt="Пинк">
-                </picture>
+                <svg class="page-footer__logo-mobile" width="75" height="22">
+                  <use xlink:href="img/sprite.svg#icon-logo-pink-blue-mobile"></use>
+                </svg>
+                <svg class="page-footer__logo-desktop" width="18" height="18">
+                  <use xlink:href="img/sprite.svg#icon-logo-pink-blue-desktop"></use>
+                </svg>
               </div>
               <div class="page-footer__social social">
                 <ul class="social__list">
@@ -298,22 +301,7 @@
           </footer>
     </div>
 
-    <script>
-      var navMain = document.querySelector('.main-nav');
-      var navToggle = document.querySelector('.main-nav__toggle');
-
-      navMain.classList.remove('main-nav--nojs');
-
-      navToggle.addEventListener('click', function() {
-        if (navMain.classList.contains('main-nav--closed')) {
-          navMain.classList.remove('main-nav--closed');
-          navMain.classList.add('main-nav--opened');
-        } else {
-          navMain.classList.add('main-nav--closed');
-          navMain.classList.remove('main-nav--opened');
-        }
-      });
-    </script>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
