--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/normalize.css" type="text/css" rel="stylesheet">
     <link href="css/style.min.css" type="text/css" rel="stylesheet">
+    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/opensanslight.woff2" as="font" crossorigin="anonymous">
   </head>
   <body>
     <div class="site-wrapper">
@@ -148,25 +151,6 @@
                     <p class="history__important history__important-desktop"><span>* </span>— обязательные для заполнения поля</p>
                   </div>
                 </section>
-                <section class="modal modal__save">
-                  <div class="modal__save-wrapper">
-                    <h2 class="modal__request modal__request-save">Ваша заявка отправлена</h2>
-                    <p class="modal__text modal__text-save">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-                  </div>
-                  <div class="modal__button-wrapper">
-                    <button type="button" class="modal__button-save history__button">Закрыть окно</button>
-                  </div>
-                </section>
-                <section class="modal modal__error">
-                  <div class="modal__error-wrapper">
-                    <h2 class="modal__request modal__request-error">Что-то пошло не так!</h2>
-                    <p class="modal__text modal__text-error">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-                    <button type="button" class="modal__button-error history__button modal__button-error-mobile">OK</button>
-                    <div class="modal__button-wrapper modal__button-wrapper-desktop">
-                      <button type="button" class="modal__button-error-desktop history__button">OK</button>
-                    </div>
-                  </div>
-                </section>
               </form>
         </section>
         </main>
@@ -217,8 +201,25 @@
             </div>
           </footer>
     </div>
-
+    <section class="modal modal__save">
+      <div class="modal__save-wrapper">
+        <h2 class="modal__request modal__request-save">Ваша заявка отправлена</h2>
+        <p class="modal__text modal__text-save">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      </div>
+      <div class="modal__button-wrapper">
+        <button type="button" class="modal__button-save history__button">Закрыть окно</button>
+      </div>
+    </section>
+    <section class="modal modal__error">
+      <div class="modal__error-wrapper">
+        <h2 class="modal__request modal__request-error">Что-то пошло не так!</h2>
+        <p class="modal__text modal__text-error">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button type="button" class="modal__button-error history__button modal__button-error-mobile">OK</button>
+        <div class="modal__button-wrapper modal__button-wrapper-desktop">
+          <button type="button" class="modal__button-error-desktop history__button">OK</button>
+        </div>
+      </div>
+    </section>
     <script src="js/app.js"></script>
-
   </body>
 </html>
